*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,5 +1,5 @@
-[[File:Begedi Clansman.jpg | thumb | 220x124px | right]]
-[[File:Shabeelada hoose, Awdheegle.jpg | thumb | 220x124px | right]]
+(Begedi Clansman) [[File:Begedi Clansman.jpg | thumb | 220x124px | right]]
+Webiga ku yaal Awdheegle [[File:Shabeelada hoose, Awdheegle.jpg | thumb | 220x124px | right]]
 Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab) wa beel hoosaad kamid ah beelwaynta [[Digil iyo Mirifle]] gaar ahaan Digil Begedi wuxuu uqaybsamaa :
 
 1- [[Abaasaad]] ( Dheegle iyo Carfaale )
@@ -22,7 +22,7 @@ Sido kale waxay degaan koonfurta [[Yemen]] sida [[Xadramoot]].
 Beeshu waxay taariiq dheer kuleeyihiin ladagalamki gumaystuhu talyaaniga iyo ingariiska e dalka haystay .
 Waa beel lagu yaqaano nabada , diris wanaaga iyo xiriir wanaagsan kala dhaxeeyo beelaha kale ee Soomaliyeed.
 Beeshu boqolaal sano kahor waxay ganacsi isugu socon jireen Soomaliya iyo wadamada carabta oo dhan gaar ahaa Yeman .
-
+[[File:Mooska banana.jpg | thumb | 220x124px | right]]
 
 MADAXDA SARE EE BEESHU:
 
@@ -32,7 +32,7 @@ MADAXDA SARE EE BEESHU:
 
 3-Sh. Abdullahi Begedi oo kaalin wayn kasoo qaatay siyaasada Somaliya.
 Wuxuu ahaa xubnaha uga sareeya maxkamada sare dowlada Somaliya xiligii dowlada rayidka ee kahoraysay kacaanka isagoona ahaa ninkii aas aasay xisbigii (HDM 1943).
-[[File:Sheikh Abdullahi Begedi.jpg | thumb | 220x124px | right]]
+Sheikh Abdullahi Begedi [[File:Sheikh Abdullahi Begedi.jpg | thumb | 220x124px | right]]
 
 4- Abuukar Sayid Ali oo looyaqan Jaajuumow fanaanka wayn.
 
