--- a/Cabdicasiis.mw
+++ b/Cabdicasiis.mw
@@ -43,7 +43,7 @@
 | website             = [http://www.mogadishucity.net/dc-contacts/page/2/ Mareegta internetka]
 | footnotes           = 
 }}
-'''Cabdicasiis''' waa degmo ka tirsan degmooyinka magaaladda [[Muqdisho]] waxeyna xeeb aad u dheer iyo sido kale waxaa ku yaala dekedii hore ee Muqdisho.
+'''Cabdicasiis''' waa degmo ka tirsan degmooyinka gobolla banadir ee magaaladda [[Muqdisho]] waxeyna xeeb aad u dheer iyo sido kale waxaa ku yaala dekedii hore ee Muqdisho.
 
 == Masaajida ==
 * Masjid Jaamaca
