--- a/Degmooyinka_Gobolka_Banaadir.mw
+++ b/Degmooyinka_Gobolka_Banaadir.mw
@@ -2,7 +2,7 @@
 * [[Boondheere]] 
 * [[Cabdicasiis]]
 * [[Deyniile]] 
-* [[Dharkeenley]] 
+* [[Dharkenley]] 
 * [[Hodan]]
 * [[Howlwadaag]] 
 * [[Hilwaa]]
