--- a/Xeraale.mw
+++ b/Xeraale.mw
@@ -75,6 +75,9 @@ Xeraale waxay ka koobantahay xaafadaha soo socda:
 
 •Sh Ammaan
 
+•beeyacad
+
+
 1: waa bari. waxa ku yaala ceelkii ugu horeeyay ee laga dhiso xeraale & isteeshinka & Dhagabadan School & Xarunta maamulka & xarun bulsho & Shirkada korontada & Suuqa Xoolaha & masjidka Jamica ah oo waliba dabaq ah & labo shirkadood oo isgaarsiineed oo lakala yiraahdo Nationlink iyo Somtel.
 
 2: dayax. waxaa ku yaala Foornada rootiga & MCH & Xarun Bolsho & Ceelbiyood.
@@ -84,6 +87,8 @@ Xeraale waxay ka koobantahay xaafadaha soo socda:
 4: howlwadaag. waxaa ku yaala Xarunta agoonta, Heraale Institute for Developemental skills & Xarun Caafimaad iyo shirkada isgaarsiinta ee Hormuud.
 
 5: Sh Amman. waxaa ku yaala Machadka Barashada Diinta islaamka ee Sh Amman iyo jaamacada lagu magcaabo cumar binu al khadaab oo noqotay jaamacadii ugu horaysay oo lagfuro dagmadaasi xeraale.
+
+6:beeyacad waa xaafad magalada ka mid ah balse ka durugsan waana mid qadiimi ah oo so jiraynah
 
    
 <br />
