*Empty MediaWiki Message*

--- a/Xeraale.mw
+++ b/Xeraale.mw
@@ -59,7 +59,7 @@
 |footnotes              = 
 |Gudoomiyaha degmada=Bashiir daabeyacad usuf|Maamulka kataliya=Galmudug}}
 
-'''Xeraale''' waa degmo ku taalo gobolka [[Galgaduud]] ee bartamaha [[Somalia]].<ref>Kurian, p.428.</ref> degmada waa degmo aad u baaxad weyn waxaana hoos taga deegaano aad u badan sida Miirjiicleey,Lajiide,Dusmaaley, Aricadys,Mayeeraan.beyacad xxanan tuur ceel-shiikh baraago diirshe.
+'''Xeraale''' waa degmo ku taalo gobolka [[Galgaduud]] ee bartamaha [[Somalia]].<ref>Kurian, p.428.</ref> degmada waa degmo aad u baaxad weyn waxaana hoos taga deegaano aad u badan sida Huurshe, Miirjiicleey,Lajiide,Dusmaaley, Aricadys,Mayeeraan.beyacad xxanan tuur ceel-shiikh baraago diirshe.
 dadka dagan dagmada Xeraale waxaa lagu qiyaasay dad gaaraya 100,000 oo Qoys. Waxa dagan beesha surre (maha Dir)
 
 == Faah Faahin ==
