most current Population and leadership

--- a/Kenya.mw
+++ b/Kenya.mw
@@ -1,6 +1,6 @@
 {{Coord|1|16|S|36|48|E|display=title}}
 {{Infobox country
-|conventional_long_name = Jamhuuriyadda Kiinya
+|conventional_long_name = Jamhuuriyadda Keenya
 |native_name = ''Jamhuri ya Kenya''
 |common_name = Kenya
 |image_flag = Flag of Kenya.svg
@@ -12,17 +12,18 @@
 |demonym = [[Demographics of Kenya|Kinyaati]]
 |ethnic_groups =
  {{unbulleted list
-  | 22% [[Kikuyu people|Kikuyu]]
-  | 14% [[Luhya people|Luhya]]
-  | 13% [[Luo people of Kenya and Tanzania|Luo]]
-  | 12% [[Kalenjin people|Kalenjin]]
-  | 11% [[Kamba people|Kamba]]
-  |  7% [[Soomaalida|Soomaali]]
-  |  6% [[Kisii people|Kisii]]
-  |  6% [[Meru people|Meru]]
-  |  1% Aan afrikaan ahayn
+  | 17.13% [[Kikuyu people|Kikuyu]]
+  | 14.35% [[Luhya people|Luhya]]
+  | 13.37% [[Kalenjin people|Kalenjin]]
+  | 10.65% [[Luo people of Kenya|Luo]]
+  | 9.81% [[Kamba people|Kamba]]
+  | 5.85% [[Soomaalida|Soomaali]]
+  | 5.68% [[Kisii people|Kisii]]
+  | 5.23% [[Mijikenda people|Mijikenda]]
+  | 4.15% [[Meru people|Meru]]
+  | 1% Aan afrikaan ahayn
  }}
-|capital = [[Nayroobi]]
+|capital = [[Nairobi]]
 |latd=1 |latm=16 |latNS=S |longd=36 |longm=48 |longEW=E
 |largest_city = [[Nayroobi]]
 |government_type = {{nowrap|[[Jamhuuriyad|Qaab jamhuuriyad]]}}
@@ -30,8 +31,6 @@
 |leader_name1 = [[Uhuru Kenyatta]]
 |leader_title2 = Madaxweeyne ku xigeen
 |leader_name2 = [[Dr. William Ruto]]
-|leader_title3 = Raiisul wasaare
-|leader_name3 = [[Raila Odinga]]
 |leader_title4 = Afhayeenka baarlamaanka
 |leader_name4 = [[Justin Muturi]]
 |leader_title5 = Gudoomiyeha maxkamadda sare
@@ -50,26 +49,21 @@
 |population_density_km2 = 67.2
 |population_density_sq_mi = 174.1 <!--Do not remove per [[WP:MOSNUM]]-->
 |population_density_rank = 140th
-|GDP_PPP_year = 2011
-|GDP_PPP_rank =
-|GDP_PPP = $71.427 billion
-|GDP_PPP_per_capita = $1,746
-|GDP_PPP_per_capita_rank =
-|GDP_nominal = $96.796 billion
-|GDP_nominal_year = 2011
-|GDP_nominal_rank =
-|GDP_nominal_per_capita = $850
-|GDP_nominal_per_capita_rank =
-|HDI_year = 2011
+|GDP_PPP_year = 2020
+|GDP_PPP = $206.532 billion
+|GDP_PPP_per_capita = $4,071
+|GDP_nominal = $109.116 billion
+|GDP_nominal_year = 2020
+|HDI_year = 2018
 |HDI = {{nowrap|{{increase}} 0.509<ref name="HDI">{{cite web |url=http://hdr.undp.org/en/media/HDR_2011_EN_Tables.pdf |title=Human Development Report 2011 |year=2011 |publisher=United Nations |accessdate=2 November 2011}}</ref>}}
-|HDI_rank = 143rd
+|HDI_rank = 147th
 |HDI_category = <span style="color:red;white-space:nowrap;">low</span>
 |Gini = 42.5
 |Gini_rank = 48th
-|Gini_year = 2008
+|Gini_year = 2014
 |Gini_category = <span style="color:#FC0;white-space:nowrap;">medium</span>
 |FSI = {{nowrap|91.3 {{increase}} 2.7}}
-|FSI_year = 2007
+|FSI_year = 2020
 |FSI_rank = 31st
 |FSI_category = <span style="color:#f00;white-space:nowrap;">Alert</span>
 |sovereignty_type = [[Xoriyad]]
@@ -90,7 +84,7 @@
 |footnotes = 
 }}
 
-'''Kenya''' waa wadan ku yaal bariga [[Afrika]]. Waxey xal la wadaagtaa wadammada [[Tansaaniya]], [[Ugaandha]], [[Harta]] [[Fiktooriya]], [[Soomaaliya]] iyo [[Itoobiya]]. Dhinaca barina waxaa kaga dhagan [[Badweynta Hindiya]]. caasimada wadanka Kenya waa [[Nayroobi]].
+'''Kenya''' waa wadan ku yaal bariga [[Afrika]]. Waxey xal la wadaagtaa wadammada [[Tansaaniya]], [[Ugaandha]], [[Harta]] [[Fiktooriya]], [[Soomaaliya]] iyo [[Itoobiya]]. Dhinaca barina waxaa kaga dhagan [[Badweynta Hindiya]]. caasimada wadanka Kenya waa Nairobi.
 Wadanka Kiinya wuxuu ka mid yahay wadammada ee ku badan yihiin xayawaanaadka ee Qaarada Afrika, sida libaaxa, waraabaha iyo shabeelka. Waa wadan ee dadka adduunka soo dalxiisaan oo na dhaqaalo hiisa kor u socdo. Wadanka magaciisa waxaa lagu magac daray [[Mount kenya|Mount Kenya]] (buurta Kiinya). Waa buurta ugu weyn wadanka Kiinya, waana midda labaad oo ugu weyn qaarada Afrika. Waayadii hore waxaa la dhihi jiray wadanka [[British East Afrika|British East Africa]], waa markii oo Ingriiska gumeynsan jiray Kiinya iyo Yugaandha.
 
 [[File:Sultanat de Zanzibar vèrs 1875.png|thumb|400px|right|Lo Sultanat de Zanzibar en 1875 avans son partiment entre Alemanha e lo Reiaume Unit.]]
