--- a/Kenya.mw
+++ b/Kenya.mw
@@ -4,7 +4,7 @@
 |native_name = ''Jamhuri ya Kenya''
 |common_name = Kenya
 |image_flag = Flag of Kenya.svg
-|image_coat = Alternate Coat of arms of Kenya.svg
+|image_coat = Coat_of_arms_of_Kenya_(Official).svg
 |image_map = Kenya (orthographic projection).svg
 |national_motto = {{native phrase|sw|"[[Harambee]]"|italics=off}}<br />{{small|"Aan wada shaqayno"}}
 |national_anthem = ''[[Ee Mungu Nguvu Yetu]]''
