--- a/Kenya.mw
+++ b/Kenya.mw
@@ -119,18 +119,11 @@ Dadka adduunkana wey u soo dalxiisaan. Dhaqaalaha Kenya maanta wuxuu gaaray Dhaq
 * [[Kisumu]] - 322,024 qof
 * [[Nakuru]] - 319.200 qof
 * [[Machakos|Majakos]] -144,109 qof
+Gobolada uu dalka ka koobnaan jiri
 
-1. [[Gobolka Dhexe (Kenya)|Centrale]]<br />
-2. [[Provincia Costiera|Costiera]]<br />
-3. [[Provincia Orientale (Kenya)|Orientale]]<br />
-5. [[Provincia Nordorientale (Kenya)|Nordorientale]]<br />
-6. [[Provincia di Nyanza|Nyanza]]<br />
-7. [[Provincia della Rift Valley|Rift Valley]]<br />
-8. [[Provincia Occidentale (Kenya)|Occidentale]]
+1. Gobolka Dhehe ( Central)<br />2. Gobolka Xeebta (Coast)<br />3. Galbeedka (Western)<br />4. [[Waqooyi bari]] (North Eastern)<br />5. [[Provincia di Nyanza|Nyanza]] (Nyanza)<br />6. Dooxada (Rift Valley)<br />7. Bari (Eastern)
 
-
-* [[File:Giraffe_-_Skyline_-_Nairobi_-_Park.jpg|thumb|east|gari oo ku socdo, xerada xayawaanaadka]]
-* [[Waqooyi bari]]
+9. Nairobi
 [[File:Ke-map.png|right|270px|thumb|Kiinya]]
 {{commonscat|Kenya|Kiinya}}
 
