--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -15,7 +15,7 @@
 
 ==Taariikh==
 Weedh abwaan soomaaliyeed ku sifeeyay Cali Gurey".
-<blockquote>"Gara la noqo gudoon iyo gole rag xaajoodo, gur iyo toosba nimaan gaal ahayn cali guraan sheegay"</blockquote>
+<blockquote>"Gar la noqo gudoon iyo gole rag xaajoodo, gur iyo toosba nimaan gaal ahayn cali guraan sheegay"</blockquote>
 
 
 Sayidka ayaa maqalay Cali Gurey inaysan isku sal banaanayn talyaanigii dhowr goorna ay isku dheceen oo dagaalo lagu ololay ay isla galeen. Markaas ayuu sayidku ergo usoo diray Cali Gurey fariina usoo faray in uu siin doono Geel cas-cas oo gaaraya 500 oo neef.
