--- a/Jibriil_Yoonis.mw
+++ b/Jibriil_Yoonis.mw
@@ -1,7 +1,7 @@
 
-Jibriil yoonis waa qabiilka ugu badan beelaha gadabuursigu ka kooban yahay. Beesha jibriir Yoonis waa beesha kaliya ee aad uga wada muuqata labada deegaan ee ay dagaan beesha Samaroon oo kala ah Gobolka Awdal iyo Ethiopia, Wasiirkii u horeeyay eey yeeshaan gadabuuri - Aadan Isaq Ahmed iyo Madaxwayne ku xigeenkii u horeeyay - Cabdirahman Awcali iyo madaxwayninhii u horeeyay Daahir riyaale - iyo xildhibaankii u horeeyay ee dawlada itoobiya - Ismail Elmi Had intuba waxay dhamaan ka soo jeedaan beesha Jibriil yoonis waxaa kaloo magac ay ku leedahay beeshu xaga ganacsiga gobolka awdal oo ay jiraan maalqabeeno ama ganacsato u dhalatay beesha sida Muuse Camir Kaahin oo abiib yoonis (xandaguul) ah Laguna tiriyo ninka xaga maalqabeenada Gadabuursi ugu horeeyo oo soo dajiya alaabta ugu badan lehna Bakhaarada ugu waawayn magaalada boorama sidoo kale cabdi xasan tukaale oo isna ah cismaan guulo Ahna tijaarta ugu wayn beesha dumaalka oo axamed yoonis ah iyo kuwa kale oo badan sida idiris muxumed sacad oo ah mulkiilaha rays hotel bakhaaro badana ku leh magaalada boorama oo ah beesha reer ahamed   waxaa kaloo magaca kor u qaaday reer dubub oo kaalin wayn kaga jira beesha jibriil yoonis - Deegaan ahaan waxay dagan yihiin Habaas oo saylac ah ilaa Haroorays oo Jigjiga hoosteeda ah 
+Jibriil yoonis waa qabiilka labad ee ugu badan marka laga reebo beesha Reer Nuur oo ah tan ugu badan Qabiilada Gadabuursigu ka kooban yahay. Beesha jibriir Yoonis waa beesha kaliya ee aad uga wada muuqata labada deegaan ee ay dagaan beesha Samaroon oo kala ah Gobolka Awdal iyo Ethiopia, Wasiirkii u horeeyay eey yeeshaan gadabuuri - Aadan Isaq Ahmed iyo Madaxwayne ku xigeenkii u horeeyay - Cabdirahman Awcali iyo madaxwayninhii u horeeyay Daahir riyaale - iyo xildhibaankii u horeeyay ee dawlada itoobiya - Ismail Elmi Had intuba waxay dhamaan ka soo jeedaan beesha Jibriil yoonis waxaa kaloo magac ay ku leedahay beeshu xaga ganacsiga gobolka awdal oo ay jiraan maalqabeeno ama ganacsato u dhalatay beesha sida Muuse Camir Kaahin oo abiib yoonis (xandaguul) ah Laguna tiriyo ninka xaga maalqabeenada Gadabuursi ugu horeeyo oo soo dajiya alaabta ugu badan lehna Bakhaarada ugu waawayn magaalada boorama sidoo kale cabdi xasan tukaale oo isna ah cismaan guulo Ahna tijaarta ugu wayn beesha dumaalka oo axamed yoonis ah iyo kuwa kale oo badan sida idiris muxumed sacad oo ah mulkiilaha rays hotel bakhaaro badana ku leh magaalada boorama oo ah beesha reer ahamed   waxaa kaloo magaca kor u qaaday reer dubub oo kaalin wayn kaga jira beesha jibriil yoonis - Deegaan ahaan waxay dagan yihiin Habaas oo saylac ah ilaa Haroorays oo Jigjiga hoosteeda ah 
 
-magaalooyinkaa ay dagaan marka laga tago boorama oo ay ka yihiin Majority 
+magaalooyinkaa ay dagaan marka laga tago boorama oo ay ku badan yihiin 
 
 1- Xariirad 
 2- Dhagaxa madow 
@@ -45,7 +45,7 @@ magaalooyinkaa ay dagaan marka laga tago boorama oo ay ka yihiin Majority
 39 Qolqol 
 40 satawe 
 41 ciye 
-iyo magalaada boorama iyo nawaaxigeeda  oo ay majority ka yihiin oo ay doorashaddii golaha deegaanka ee 2012 ka heleen ku dhawaad 50% codadkii la tiriyay 
+iyo magalaada boorama iyo nawaaxigeeda  oo ay majority ka yihiin oo ay doorashaddii golaha deegaanka ee 2012 ka heleen ku dhawaad 40% codadkii la tiriyay 
 jufooyinka beesha jibriil yoonis waxay u kala baxaan 
 
          Yonis Osman waa ,
