*Empty MediaWiki Message*

--- a/Reer_Nuur.mw
+++ b/Reer_Nuur.mw
@@ -4,7 +4,7 @@ Qabiilka Reer Nuur waxa uu ka mid yahay Beel waynta Samaroon. Waana Qabiilka taa
 
 Degmooyinka ee uu ka koobanyahay Gobolka Awdal saddex kamida Reer Nuurku wuxu ka soosaaraa xildhibaanada ugu badan ee golayaasha deegaanka sida: Degmada Baki, Degmada Boorama iyo Degmada Seylac iyo degmada Dilla.
 
-Gobolka Awdal, Reer Nuurku waa reerka ugu kuraasta badan golayaasha Guurtida,Wakiilada iyo sidoo kale Golayaasha Deegaankaba, marka laga reebo jibriil yoonis oo ah beesha ugu badan samaroonka intiisa kale uguna kuraas badan golaha deegaanka iyo wakiiloda iyo baarlamanba golaha deegaanka ee dagmada booramana ku leh Todoba xildhibaan Reer nuurkuna waa beesha labaad ee ugu badan samaroon ama gadabuursi waxayna ku leeyihiin golaha deegaanka boorama labo waxayna walaalo yihiin ama bah wadaag yihiin.beelaha   1 jibriil yoonis  2 aadan yoonis iyo 3 cali yoonis oo la isku dhaho AFARTA ILMA YOONIS waxanay taasi ku tusasaa inay leeyihiin codka ugu badan ee ku dhaca sanaaduuqda doorashooyinka Somaliland. Sidoo kale Afarta kursi ee uu Samaroonku ku leeyahay Baarlamanka Jamhuuriyada Djibouti waxa uu Reer Nuurku ku leeyahay Labo kursi oo kamid ah.
+Gobolka Awdal, Reer Nuurku waa reerka ugu kuraasta badan golayaasha Guurtida,Wakiilada iyo sidoo kale Golayaasha Deegaankaba,  Reer nuurkuna waa beesha 1 ee ugu badan samaroon ama gadabuursi waxayna ku leeyihiin golaha deegaanka boorama labo waxayna walaalo yihiin ama bah wadaag yihiin.beelaha   1 jibriil yoonis  2 aadan yoonis iyo 3 cali yoonis oo la isku dhaho AFARTA ILMA YOONIS waxanay taasi ku tusasaa inay leeyihiin codka ugu badan ee ku dhaca sanaaduuqda doorashooyinka Somaliland. Sidoo kale Afarta kursi ee uu Samaroonku ku leeyahay Baarlamanka Jamhuuriyada Djibouti waxa uu Reer Nuurku ku leeyahay Labo kursi oo kamid ah.
 
 Dhaqan ahaan,Reer Nuurku waxa uu leeyahay nidaam dhaqan oo lagu kala dambeeyo iyo saldanad fac-weyn. Hadaba Reer Nuurka waxa lagu tiriyaa inay yihiin dadka ugu ilbaxsan uguna aqoonta badan waqooyiga Soomaaliya, Reer Nuurka waxaa ka dhashay dadka ugu caansan Soomaalida, haday noqoto dhinacyada: Dhaqaalaha, Waxbarashada, Caafimaadka, Siyaasada iyo sidoo kale Fanka iyo Suugaanta. Waxana kamid ahaa:
 
@@ -91,3 +91,4 @@ Reer Nuurku waa dadka ilbax ahaan ugu horeeya dadka Soomaalida taasi waxa kuu ca
 '''Cinwaanka Sadexaad (3)''' 
 
 Reer Nuurku waa dad lagu yaqaano geesinimo iyo raganimo, waxa ka dhashay ninkii ugu horeeyay ee gala dagaalkii 1977 dawlada Soomaaliya la gashay Ethiopian, sidoo kale markii dawladii dhexe ee Somaaliya burburtay waa dadkii dufaacay dhul waynaha ay dagaan beelaha Samaroon.
+Beesha Reer nuur waa beesha ugu horaysa ee Dagal gasha marka cadaw imado
