/* Editing news 2020 #3 */ new section

--- a/Wikipedia:Safaarad.mw
+++ b/Wikipedia:Safaarad.mw
@@ -1218,3 +1218,26 @@ Thanks for thinking about the future of the movement, --[[:m:Talk:Communications
 
 ''Note: The survey is conducted via a third-party service, which may subject it to additional terms. For more information on privacy and data-handling, see the [[foundation:Special:MyLanguage/Naming Convention Proposals Movement Feedback Survey Privacy Statement|survey privacy statement]].''
 <!-- Message sent by User:Elitre (WMF)@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=User:Elitre_(WMF)/All_wikis_June_2020&oldid=20238830 -->
+
+== Editing news 2020 #3 ==
+
+<div class="plainlinks mw-content-ltr" lang="en" dir="ltr">
+
+<em>[[m:VisualEditor/Newsletter/2020/July|Read this in another language]] • [[m:VisualEditor/Newsletter|Subscription list for this multilingual newsletter]]</em>
+
+[[File:50M@2x.png|thumb|alt=A gold star with a blue ribbon, and the text 50m|More than <strong>50 million edits</strong> have been made using the visual editor on desktop.|400px]]
+
+Seven years ago this month, the [[mw:Editing team|Editing team]] offered the visual editor to most Wikipedia editors.  Since then, editors have achieved many milestones:
+
+* More than <strong>50 million edits</strong> have been made using the visual editor on desktop.
+* More than <strong>2 million new articles</strong> have been created in the visual editor. More than 600,000 of these new articles were created during 2019.
+* The visual editor is <strong>increasingly popular</strong>.  The proportion of all edits made using the visual editor has increased every year since its introduction.
+* In 2019, <strong>35% of the edits by newcomers</strong> (logged-in editors with ≤99 edits) used the visual editor. This percentage has <strong>increased every year</strong>.
+* Almost <strong>5 million edits on the mobile site</strong> have been made with the visual editor.  Most of these edits have been made since the Editing team started improving the [[mw:Mobile visual editor|mobile visual editor]] in 2018.
+* On 17 November 2019, the [https://discuss-space.wmflabs.org/t/first-edit-made-to-wikipedia-from-outer-space/2254 <strong>first edit from outer space</strong>] was made in the mobile visual editor. 🚀 👩‍🚀
+* Editors have made more than <strong>7 million edits in the 2017 wikitext editor</strong>, including starting <strong>600,000 new articles</strong> in it.  The [[mw:2017 wikitext editor|2017 wikitext editor]] is VisualEditor's built-in wikitext mode.  You can [[Special:Preferences#mw-prefsection-betafeatures|enable it in your preferences]].
+
+[[User:Whatamidoing (WMF)|Whatamidoing (WMF)]] ([[User talk:Whatamidoing (WMF)|talk]])
+
+</div> 12:55, 9 Luuliyo 2020 (UTC)
+<!-- Message sent by User:Elitre (WMF)@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=VisualEditor/Newsletter/Wikis_with_VE&oldid=20232673 -->
