/* Taariikhdi hore caynaba */

--- a/Caynaba.mw
+++ b/Caynaba.mw
@@ -75,7 +75,7 @@ ka caana waa gobol shidaal leh iyo macdan]]
 ==Taariikhdi hore caynaba==
 Waa mid kamida magaalooyinka ugu da wayn somaliland  oo aad u caan ah waxa ay ku taalaa meel istaraji ah oo waxa mara laamiga dheer ee isku xidha dalkii somalia la isku odhan jiray. Tirada dadka degan imika waxa lagu qiyaasaa ilaa 100.0000 kun oo qof.
 Caynaba waxa ay hada noqotay Gobol oo waxa ay caasimad u tahay Gobolka Saraar waxa uu ka tirsan yahay Jamhuuriyadda [[Somaliland]].
-'''Taarikhdi hore ee Caynaba'''
+=='''Taarikhdi hore ee Caynaba'''==
 Caynabo, Magaalo Madaxda Gobolka Saraar ee Caynabo waa magaalo ka mid ah magaaloyinka ugu dada weyn ,waxaa ku yaalla ceel jirey intii dad jirey laakiin waxaa la degey wakhti aan ka badnayn Qarni,Gurigii[[File:Caynabo ruins.jpg|thumb|{{en| hadhaga dhismihi u horeyay 100 sano ka hor}}]]
  Dhismihi ugu horeeyey ee dhagax ahna waxaa dhisay Ingiriiska mudo ku dhow 100 sanadood isagoo ka dhigtay Saldhig Bilays oo ilaa xukuumadii Siyaad Barre isticmaali jirtay,iminkana waxaa kasii taagan Dhowr Gidaar.
 
