--- a/LG.mw
+++ b/LG.mw
@@ -1,7 +1,7 @@
 [[File:LG logo (2015).svg||500px|thumb|Astaanka LG]]
 
 '''LG''' waa shirkad soo saarta qalabka elektaroonik sida Tv, PC, Saacado, Kaamirooyin iyo Qaboojiye.
-
+{{Flag|South Korea}}
 [[Category:Gumud]]
 [[Category:Elektaroonig]]
 [[Category:Teknooloji]]
