--- a/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
+++ b/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
@@ -20,7 +20,7 @@ Iyaadoo helitoanka aragti midaysan ee la xiriirta xuquuqdan iyo xorriyaadkan ay 
 Golaha loo dhanyahay ee Qaramada Midoobay wuxuu soo saarayaa Baaqan oo saldhig u ah dadyowga dunida ku nool dhammaantood sidii qof waliba ama xubin kasta oo ka mid ah bulshada, isagoo maskaxda ku haya Baaqan, ugu dadaali lahaa sare u qaadidda dhowritanka xuquuqdan iyo xorriyaadkan, isagoo u mareya waxbarasho iyo barbaarin, talaabooyin xiriir ah qaadaya xagga dibadda iyo gudahaba sidii loo xaqiijin lahaa in si dhab ah loo aqoonsado ha ahaato dadweynaha ku dhex nool Dawladaha xubinta ka ah Qaramada Midoobay ama dadyowga ku nool dhulalka xukonkooda hoos yimaado.
 === Qod I ===
 
-Aadanaha dhammaantiis wuxuu dhashaa isagoo adoon ah ah kana siman xagga sharafta iyo xuquuqada Waxaa Alle (Ilaah) siiyay aqoon iyo wacyi, waana in qof la arkaa qofka kale ula dhaqmaa si walaaltinimo ah.
+Aadanaha dhammaantiis wuxuu dhashaa isagoo xor ah kana siman xagga sharafta iyo xuquuqada Waxaa Alle (Ilaah) siiyay aqoon iyo wacyi, waana in qof la arkaa qofka kale ula dhaqmaa si walaaltinimo ah.
 
 === Qod II ===
 
