--- a/Dabeyl.mw
+++ b/Dabeyl.mw
@@ -1,4 +1,5 @@
 ::''Kani waa maqaal ku saabsan "dabeysha".''
+[[File:Pieter_Kluyver_-_Boom_in_stormwind.jpg|thumb|Pieter Kluyver (1816–1900)]]
 [[File:Occluded mesocyclone tornado5 - NOAA.jpg|thumb|Dabeeylaha wareega ee halista ah]]
 
 '''Dabayl''' ([[ingiriis]]: wind; [[carabi]]: ريح) waa socodka [[hawo|hawada]] ayadoo baaxad weyn leh. 
