*Empty MediaWiki Message*

--- a/Saldanadii_Calmiskaad.mw
+++ b/Saldanadii_Calmiskaad.mw
@@ -24,7 +24,7 @@
 |image_map_caption      = Horn of Africa in 1915
 |national_motto         = 
 |national_anthem        = 
-|capital                = [[Hobyo]]
+|capital                = [[Boosaaso]]
 |common_languages       = [[Af-Soomaali]]{{·}}[[Af Carabi]]
 |government_type        = [[Ugaastooyo]]
 |leader1                = [[Cali Gurey]]
