*Empty MediaWiki Message*

--- a/Saldanadii_Calmiskaad.mw
+++ b/Saldanadii_Calmiskaad.mw
@@ -44,5 +44,5 @@
 |today                  = {{flag|Somalia}}
 }}
 
-'''Saldanadda Calmiskaad''' ({{lang-so|''Sultanate of Calmiskaad''}}, {{lang-ar|سلطنة المسكاد}}), sidoo kale loo yaqaaney '''Saldanadii Boosaaso''', waxay ahayd Saldannad [[Soomaali|Soomaaliyeed]] oo qarnigii 19aad ilaa qarnigii 20aad ka jirtey Deegaanada Woqooyi bari, gaar ahaan inta badan galbeedka gobolka bari. Assaaska suldanadan waxay ku timi wadatashi balaaran oo ay sameeyeen Beesha [[Dishiishe]] oo ahayd udub dhexaadka u hayd saldanadda sanadii 1881. Hoggaamiyihii ugu horreeyay uguna xilliga dheeraa wuxuu ahaa Ugaas [[Cali Gurey]].
+'''Saldanadda Calmiskaad''' ({{lang-so|''Sultanate of Calmiskaad''}}, {{lang-ar|سلطنة المسكاد}}), sidoo kale loo yaqaaney '''Saldanadii Boosaaso''', waxay ahayd Saldannad [[Soomaali|Soomaaliyeed]] oo qarnigii 19aad ilaa qarnigii 20aad ka jirtey Deegaanada Woqooyi bari, gaar ahaan inta badan galbeedka gobolka Bari. Assaaska saldanaddu waxay ku timi wadatashi ballaaran oo ay yeesheen Beesha [[Dishiishe]] sanadii 1881 oo ahayd beesha udub dhexaadka u ah saldanadda, ugaas [[Cali Gurey]] wuxuu ahaa hoggaamiyihii ugu horreeyay uguna xilliga dheeraa.
 [[Category:Magaalooyinka Soomaaliya]]
