*Empty MediaWiki Message*

--- a/Saldanadii_Calmiskaad.mw
+++ b/Saldanadii_Calmiskaad.mw
@@ -31,7 +31,7 @@
 |year_leader1           = 
 |leader2                = 
 |year_leader2           = 
-|title_leader           = [[Hoogaamiye/Ugaas]]
+|title_leader           = Hooggaamiye/Ugaas
 |leader3                = 
 |year_leader3           = 
 |legislature            = 
