*Empty MediaWiki Message*

--- a/Saldanadii_Calmiskaad.mw
+++ b/Saldanadii_Calmiskaad.mw
@@ -18,8 +18,7 @@
 |event_end              = 
 |image_flag_size        = 
 |flag                   = 
-|image_flag             = 
-|image_coat             = 
+|image_flag             =  
 |image_map              =
 |image_map_caption      = Horn of Africa in 1915
 |national_motto         = 
@@ -31,7 +30,7 @@
 |year_leader1           = 
 |leader2                = 
 |year_leader2           = 
-|title_leader           = Hooggaamiye/Ugaas
+|title_leader           = Hoggaamiye/Ugaas
 |leader3                = 
 |year_leader3           = 
 |legislature            = 
