*Empty MediaWiki Message*

--- a/Saldanadii_Calmiskaad.mw
+++ b/Saldanadii_Calmiskaad.mw
@@ -43,5 +43,5 @@
 |today                  = {{flag|Somalia}}
 }}
 
-'''Saldanadda Calmiskaad''' ({{lang-so|''Sultanate of Calmiskaad''}}, {{lang-ar|سلطنة المسكاد}}), sidoo kale loo yaqaaney '''Saldanadii Boosaaso''', waxay ahayd Saldannad [[Soomaali|Soomaaliyeed]] oo qarnigii 19aad ilaa qarnigii 20aad ka jirtey Deegaanada Woqooyi bari, gaar ahaan inta badan galbeedka gobolka Bari. Assaaska saldanaddu waxay ku timi wadatashi ballaaran oo ay yeesheen Beesha [[Dishiishe]] sanadii 1881 oo ahayd beesha udub dhexaadka u ah saldanadda, ugaas [[Cali Gurey]] wuxuu ahaa hoggaamiyihii ugu horreeyay uguna xilliga dheeraa.
+'''Saldanadda Calmiskaad''' ({{lang-so|''Sultanate of Calmiskaad''}}, {{lang-ar|سلطنة المسكاد}}), sidoo kale loo yaqaaney '''Saldanadii Boosaaso''', waxay ahayd Saldannad [[Soomaali|Soomaaliyeed]] oo qarnigii 19aad ilaa qarnigii 20aad ka jirtey Deegaanada Woqooyi bari, gaar ahaan inta badan galbeedka gobolka Bari. Assaaska saldanaddu waxay ku timi wadatashi ballaaran oo ay yeesheen Beesha [[Dishiishe]] sanadii 1881 oo udub dhexaadka u ahayd saldanadda, ugaas [[Cali Gurey]] wuxuu ahaa hoggaamiyihii ugu horreeyay uguna xilliga dheeraa.
 [[Category:Magaalooyinka Soomaaliya]]
