*Empty MediaWiki Message*

--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -1,5 +1,5 @@
 {{Infobox person
-| name        = Cali Maxamuud Samantar (Cali Gurey) </br> Ali Mohamud Samanter<br> علي محمود السمنتر
+| name        = Cali Maxamuud Samantar (Cali Gurey) </br> Ali Mohamud Samanter (Ali Gurey) <br> علي محمود السمنتر
 | image       = 
 | imagesize   = 190px
 | caption     = 
