Bog loo bedeley [[Saldanadii Cal Miskaad]]

--- a/Saldanadii_Calmiskaad.mw
+++ b/Saldanadii_Calmiskaad.mw
@@ -1,3 +1,4 @@
+#REDIRECT [[Saldanadii Cal Miskaad]]
 {{Infobox Former Country
 |native_name            = Suldanadda Calmiskaad <br /><br /> {{lang|ar|سلطنة المسكاد}}
 |conventional_long_name = Sultanate of Calmiskaad
