*Empty MediaWiki Message*

--- a/Sool.mw
+++ b/Sool.mw
@@ -12,7 +12,7 @@
 |image_flag             = 
 |image_seal             = 
 |image_shield           = 
-|image_map              =Somalia  regions map Sool.png
+|             =Somalia  regions map Sool.png
 |mapsize                =250px
 |map_caption            =Waxay Somaliland kaga taal.
 |coordinates_display    =inline,title
