*Empty MediaWiki Message*

--- a/Sool.mw
+++ b/Sool.mw
@@ -14,7 +14,7 @@
 |image_shield           = 
 |             =Somalia  regions map Sool.png
 |mapsize                =250px
-|map_caption            =Waxay Somaliland kaga taal.
+|map_caption            =Waxay Somalia  kaga taal.
 |coordinates_display    =inline,title
 |coordinates_region     =SO
 |subdivision_type       =Dalka
