--- a/Sool.mw
+++ b/Sool.mw
@@ -18,7 +18,7 @@
 |coordinates_display    =inline,title
 |coordinates_region     =SO
 |subdivision_type       =Dalka
-|subdivision_name       ={{flag|Somaliland}}
+|subdivision_name       =
 |subdivision_type1      =
 |subdivision_name1      =
 |seat_type              =Xarun
