Removing [[:c:File:Flag_of_the_Indian_National_Congress.svg|Flag_of_the_Indian_National_Congress.svg]], it has been deleted from Commons by [[:c:User:EugeneZelenko|EugeneZelenko]] because: Copyright violation; see [[:c:Commons:Licensing|]] ([[:c:COM:CSD#F

--- a/Hindiya.mw
+++ b/Hindiya.mw
@@ -63,7 +63,7 @@ Hindida waxee Khatar kuyihiin film soo saarka iyo heesaha, waxeena ka midyihiin 
 [[File:Índia - Industria e ressorsas naturalas principalas.png|thumb|Industria e ressorsas naturalas principalas d'Índia.]]
 <gallery>
 File:Flag of India.svg|Drapèu d'Índia.
-File:Flag of the Indian National Congress.svg|Drapèu dau Congrès Nacionau Indian.
+|Drapèu dau Congrès Nacionau Indian.
 File:Emblem of India.svg|Emblèma d'Índia.
 File:AshokaLions.jpg|Lo capitèu de Sarnath en [[1911]].
 </gallery>
