*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -40,7 +40,7 @@ Sheikh Abdullahi Begedi [[File:Sheikh Abdullahi Begedi.jpg | thumb | 220x124px |
 
 6- Xil: maxamed Yusuf Xasan.
 
-7- Maxamed Xaaji Shekh Xaaji Xuseen. 
+7- Maal qabeenka weten Xaaji Shekh Xaaji Xuseen Axmed Iman 
  
 8_ Ganacsadaha weyn : 
 Cali cabdulle mayoow (shuraylle) ahna u tartame xalibaan sanadka marka uu ahaa1968. 
