--- a/Komoros.mw
+++ b/Komoros.mw
@@ -38,13 +38,13 @@
 |population_density_km2 = 392
 |population_densitymi³  =  <!--Do not remove per [[WP:MOSNUM]]-->
 |population_density_rank = 25th
-|GDP_PPP_year = 2017
+|GDP_PPP_year = 2020
 |GDP_PPP = $1.329 billion<ref name=imf2>{{cite web |url=http://www.imf.org/external/pubs/ft/weo/2016/02/weodata/weorept.aspx?pr.x=87&pr.y=7&sy=2014&ey=2021&scsm=1&ssd=1&sort=country&ds=.&br=1&c=632&s=NGDPD%2CNGDPDPC%2CPPPGDP%2CPPPPC&grp=0&a=|title=Comoros |publisher=International Monetary Fund |accessdate=17 April 2012}}</ref>
 |GDP_PPP_per_capita = $1,566<ref name=imf2 />
 |GDP_PPP_rank = 179th
 |GDP_PPP_per_capita_rank = 179th
-|GDP_nominal = $700 Million<ref name=imf2 />
-|GDP_nominal_year = 2017
+|GDP_nominal = $0.800 Billion Dollar <ref name=imf2 />
+|GDP_nominal_year = 2020
 |GDP_nominal_per_capita = $774<ref name=imf2 />
 |GDP_nominal_rank = 185th
 |GDP_nominal_per_capita_rank = 158th
