*Empty MediaWiki Message*

--- a/DAGAALKII_STALINGRAD.mw
+++ b/DAGAALKII_STALINGRAD.mw
@@ -1,14 +1,13 @@
 
+
+
+
+[[File:Bundesarchiv Bild 101I-341-0489-13, Frankreich, Flugzeug Dornier Do 17.jpg|500px|right|waa diyaarad ka mid ahayd diyaaradihii Luftwaffe oo ay lahaayeen jarmalka]]
+
+[[File:Germans in Stalingrad.jpg|right|500px|waa ciidamadii jarmalka oo ku sugan magaalada volgograd]]
+
+
+
 Dagaalkii stalingrad wuxuu bilaawday sanadku markii uu ahaa (23/augst/1942) wuxuuna dhamaaday dagalka 2/febuary/1943 wuxuuna ahaa dagaalkii ugu weynaa ee laisaga hor imaado intii lagu gudo jiray (ww2)ama dagaalkii labaad ee adduunka markii ay jarmalka iyo xulufadii isbahaysiga ay ladagaalameed midawgii suuvieetka si ay u maamulaan magaalada istalingrad ee hda loo yaqaano (volgograd) magaaladaas oo dhacda koonfurta ruushka magaaladaas oo ay ku calaamadeeyeen goob dagaal wuxuuna amray hogaamiyihii jarmalka ee hitler in la sameeyo weeraro toos ah oo xaga cirka ah. waxaa dagaalkaan loo tixgaliya inuu yahay kan ugu weyn uguna dhimashada badnaa. dagaalkii stalingrad waxaa ku  dhintay  ku dhawaad 2.2milyan oo qof. dagaalkii stalingrad wuxuu ahaa dagaal aad ay ugu jabeen xulufadii jermalka (nazi) waxaana  qasab ku noqotay inay isaga baxaan ciidamadii jermalka dhinaca koonfureed ee magaalada istalingrad.  sababtoo qasaaraha ay kala kulmeen dagaalka
-<gallery>
-File:Bundesarchiv Bild 101I-341-0489-13, Frankreich, Flugzeug Dornier Do 17.jpg|waa diyaarad ka mid ahayd diyaaradihii Luftwaffe oo ay lahaayeen jarmalka
-</gallery>
- 
-<gallery>
-File:Germans in Stalingrad.jpg|waa ciidamadii jarmalka oo ku sugan magaalada volgograd
-</gallery>
 weeraradii jarmalka muhiimadoodu waxay ahayd inay gacanta ku dhigaan magaalada volgograd (stalingrad) iyadoo la adeegsanaayo guutada 6aad ee ciidanka. ciidamadii jarmalka waxay taageero buxdo ka heleen diyaarahadii ay lahaayeen oo la oran jiray ( Luftwaffe)
-Waxaana ciidamadii komaandooska germalka madax u ahaa
-1)Adolf hitler  2)friedreg palus
-3)erich von      4)manstein
-Oo ka socdeen dhinaca jarmalka
+Waxaana ciidamadii komaandooska germalka madax u ahaa.
