*Empty MediaWiki Message*

--- a/DAGAALKII_STALINGRAD.mw
+++ b/DAGAALKII_STALINGRAD.mw
@@ -2,9 +2,9 @@
 
 
 
-[[File:Bundesarchiv Bild 101I-341-0489-13, Frankreich, Flugzeug Dornier Do 17.jpg|500px|right|waa diyaarad ka mid ahayd diyaaradihii Luftwaffe oo ay lahaayeen jarmalka]]
+[[File:Bundesarchiv Bild 101I-341-0489-13, Frankreich, Flugzeug Dornier Do 17.jpg|500px|thumb|right|waa diyaarad ka mid ahayd diyaaradihii Luftwaffe oo ay lahaayeen jarmalka]]
 
-[[File:Germans in Stalingrad.jpg|right|500px|waa ciidamadii jarmalka oo ku sugan magaalada volgograd]]
+[[File:Germans in Stalingrad.jpg|right|500px|thumb|waa ciidamadii jarmalka oo ku sugan magaalada volgograd]]
 
 
 
