--- a/Xeebjire.mw
+++ b/Xeebjire.mw
@@ -59,21 +59,49 @@ Guud ahaan [[Dad|bulshada]] ku abtirsata beesha Xeebjire waxay deegaan ku yihiin
 
 Beesha Xeebjire waxay caan ku tahay nabada iyo horumarka. Tan iyo ilaa heshiisyadii lagu dhisay maamulka Soomaaliland ayay beeshu martigelin, taageero, dhexdhexaadin iyo tusaalayn ku wadan bulshada ku dhaqan deegaanadaasi. Waxaa intaas dheer oo beesha Xeebjire lagu yaqaanaa horumarinta iyo dhiirigelinta [[waxbarasho|waxbarashada]], [[caafimaad]]ka, [[aqoon]]ta iyo [[cilmi]]ga.<ref>[https://en.wikipedia.org/wiki/Demographics_of_Somalia Demographics of Somalia and the divisions of tribes]</ref>
 
-==Shaxda Beesha==
-*Beesha Xeebjire:
-**Maandhoowe (curad)
-***Reer Xareed
-***Reer Iidle
-**Reer Maxamuud
-***Reer Cumar
-****Gardheere
-****Reer Biiq
-****Reer Cali
-****Guntixun
-****Kuwo kale
-***Reer Xasan
-**Reer Aw Nuux
-***Sadex jilib ee Reer aw Nuux
+==Faraca Beesha==
+{{clade |thickness=3
+ |label1='''SHEEKH ISMAACIIL<br>(Xeebjire) 
+ |1={{clade |thickness=3
+ |label1='''ABIIBAKAR</br>(Maandhoowe)
+ |1={{clade |thickness=3
+   |label1='''Xareed
+   |1={{clade |thickness=3
+   |1='''Aabadiid
+   |2='''Suge
+   |3='''Billeyaasha}}
+   |2='''Samatar}}
+ |label2='''Maxamuud
+ |2={{clade |thickness=3
+   |label1='''Aw Xasan
+   |1={{clade |thickness=3
+   |1='''Cabdale
+   |2='''Cali gurey
+   |3='''Xarago Madow}}
+   |label2='''Cumar
+   |2=|2={{clade |thickness=3
+   |1='''Gadheere
+   |2='''Fudeey
+   |3='''Eebo
+   |label5='''?
+   |5={{clade |thickness=3
+   |1='''Siciida gaada
+   |2='''Walaaldoon}}
+   |label6='''Muuse
+   |6={{clade |thickness=3
+   |1='''Caafi
+   |2='''Cirooley
+   |3='''Biiq
+   |4='''Summalle}}
+}}
+}}
+ |label3='''Aw Nuux
+ |3={{clade |thickness=3
+   |1='''Allamagan
+   |2='''Geeldoon
+   |3='''Aw Cismaan'''}}
+}}
+}}
 
 ==Dadka Caanka==
 * [[Sheekh Muuse Jaamac Goodaad]], suldaan iyo siyaasi
