*Empty MediaWiki Message*

--- a/Cayr_(beel).mw
+++ b/Cayr_(beel).mw
@@ -1,5 +1,5 @@
 
-'''[[Cayr]]''' waa beel ka mid ah bahweynta [[Habargidir]] ee [[Hawiye]]<ref>http://www.abtirsi.com/view.php?person=5142</ref>. Waana wiilkii ugu weynaa ilmihii odayga Madar kicis hiraab. odayga Cayr magacisi waa Maxamed <ref>http://www.abtirsi.com/view.php?person=714&abtirsiLang=0</ref>, waxaa dhashay hooyo Caasha Kaarshe Wadalaan.<ref>http://www.abtirsi.com/view.php?person=7066</ref>
+'''[[Cayr]]''' waa beel ka mid ah bahweynta [[Habargidir]] ee [[Hawiye]]<ref>http://www.abtirsi.com/view.php?person=5142</ref>. Waxaa uu ku xigay curadka  caruurta odayga Madar kicis hiraab ee sifaadle madarkicis.  odayga Cayr magacisi waa Maxamed madarkicis <ref>http://www.abtirsi.com/view.php?person=714&abtirsiLang=0</ref>, waxaa dhashay hooyo Caasha Kaarshe Wadalaan.<ref>http://www.abtirsi.com/view.php?person=7066</ref>
 
 Besha cayr waxay ka mid tahay qabiilada ugu weyn Habargidir; waxay degtaa beeshu meelo ka mid ah gobolka [[Jubbada Dhexe]] iyo gobolo ku yaala Badhtamaha wadanka [[Soomaaliya]].
 
