--- a/Buuraha_Oogo.mw
+++ b/Buuraha_Oogo.mw
@@ -1,5 +1,5 @@
 {{Infobox mountain range
-|name=Ogo Mountains
+|name=Buuraha Oogo
 |photo=Almadow Overview.JPG
 |photo_caption= 
 |country=[[flag|Somalia]]
