*Empty MediaWiki Message*

--- a/Cal_Madow.mw
+++ b/Cal_Madow.mw
@@ -1,9 +1,25 @@
-[[File:Almadow_Overview.JPG|500px|thumb|cal madow]]
+[[File:Almadow_Overview.JPG|thumb|cal madow]]
 '''Buuraha Cal Madow''' waxay ku yaalaan gobolka [[Sanaag]], gobolada [[bari]] ee [[Somaliland]].Cal madow waxay wax yar u jirtaa magaalada laasqoray buurtaan waa buur aad u qurux badan oo markeeda hore loo dalxiis tagi jiray.Buurta dherekeeeeda waxay u dhaxaysaa 700 ilaa 800 oo mitir.waxay buurtan dhereran tahay ilaa ceerigaabo ilaa meel udhow xuduuda gobolka bari ee puntland Somalia.
-[[File:Gerenuks_in_Samburu.jpg|right|600px|thumb|Garanuug geed saloolanaysa]]
-[[File:Klipspringer (Oreotragus oreotragus) head.jpg|500px|thumb|right|Head details]]
+[[File:Gerenuks_in_Samburu.jpg|thumb|Garanuug geed saloolanaysa]]
+[[File:Klipspringer (Oreotragus oreotragus) head.jpgthumb|Head details]]
 
-dhameestir walaal sharaxaadda buurtaan qiimaha leh
+==Sidoo kale fiiri==
+*[[:Category:Buuraha Soomaaliya|Buuraha Soomaaliya]]
+*[[Libaaxley|Buurta Libaaxley]]
+*[[Buuraha Oogo]]
+
+==Tixraac==
+{{Reflist}}
+*{{cite web|title=Galgodon Highlands|url=http://www.britannica.com/EBchecked/topic/223969/Galgodon-Highlands|publisher=Encyclopaedia Britannica|accessdate=25 June 2013}}
+
+==Xigasho==
+*{{cite web|title=Somalia National Parks|url=http://happytoursug.com/somalia_national_parks|publisher=Happy Tours|accessdate=13 June 2013}}
+
+{{Maqaalo Soomaaliya}}
+[[Category:Buuraha]]
+[[Category:Buuraha Soomaaliya]]
+[[Category:Buuraha Somaliland]]
+
 
 [[Category:Juqraafiga Soomaaliya]]
 [[Category:Somaliland]]
