--- a/Cal_Madow.mw
+++ b/Cal_Madow.mw
@@ -1,7 +1,7 @@
 [[File:Almadow_Overview.JPG|thumb|cal madow]]
 '''Buuraha Cal Madow''' waxay ku yaalaan gobolka [[Sanaag]], gobolada [[bari]] ee [[Somaliland]].Cal madow waxay wax yar u jirtaa magaalada laasqoray buurtaan waa buur aad u qurux badan oo markeeda hore loo dalxiis tagi jiray.Buurta dherekeeeeda waxay u dhaxaysaa 700 ilaa 800 oo mitir.waxay buurtan dhereran tahay ilaa ceerigaabo ilaa meel udhow xuduuda gobolka bari ee puntland Somalia.
 [[File:Gerenuks_in_Samburu.jpg|thumb|Garanuug geed saloolanaysa]]
-[[File:Klipspringer (Oreotragus oreotragus) head.jpgthumb|Head details]]
+[[File:Klipspringer (Oreotragus oreotragus) head.jpg|thumb|Head details]]
 
 ==Sidoo kale fiiri==
 *[[:Category:Buuraha Soomaaliya|Buuraha Soomaaliya]]
