*Empty MediaWiki Message*

--- a/Cadaado.mw
+++ b/Cadaado.mw
@@ -68,6 +68,8 @@ Madaxdii dawladihii is xig xigay ee dalka ayaa lagu xasuustaa in ay tageen magaa
 
 labo ka mid ah madaxweynayaashii soomaaliya oo kala ah Sheikh Shariif Sheikh Axmed iyo Xasan Sheikh Muxamuud ayaa lagu xasuustaa in ay tageen magaalada Cadaado iyagoo hogaaminayo wufuud markaasi ku jiray dawladihii madaxda ay ahaayeen.
 
+Cabdi Rizaq Axmed Nuur waxa uu ka mid yahay dhalin yarada ku koray waqti badana ku qaatay magaalada Cadaado.
+
 ==Waxbarashada==
 
 Magaalada Cadaado ee xarunta ganacsiga Galmudug waxaa ku yaalo 25 dugsiyo Hoose/Dhexe iyo  12Dugsiyo sare ah waxaa sidoo kale ku taalo xarunta jaamacada SIMAD ee gobolada Mudug iyo Galgaduud. 
