--- a/Cadaado.mw
+++ b/Cadaado.mw
@@ -68,7 +68,7 @@ Madaxdii dawladihii is xig xigay ee dalka ayaa lagu xasuustaa in ay tageen magaa
 
 labo ka mid ah madaxweynayaashii soomaaliya oo kala ah Sheikh Shariif Sheikh Axmed iyo Xasan Sheikh Muxamuud ayaa lagu xasuustaa in ay tageen magaalada Cadaado iyagoo hogaaminayo wufuud markaasi ku jiray dawladihii madaxda ay ahaayeen.
 
-Cabdi Rizaq Axmed Nuur waxa uu ka mid yahay dhalin yarada ku koray waqti badana ku qaatay magaalada Cadaado.
+Cabdi Rizaq Axmed Nuur ( Carabey Shuuke) waxa uu ka mid yahay dhalin yarada ku koray waqti badana ku qaatay magaalada Cadaado.
 
 ==Waxbarashada==
 
